tests/snapshots/integration_test__reconnect - initial login.snap
---
source: tests/integration_test.rs
expression: messages
---
[
  OutgoingClient(
    type: "client",
    id: "[uuid]",
    username: Some("user"),
  ),
]
